--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>first repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+<h1>this is h1</h1>
+<h2>this is h2</h2>
+
 </body>
 </html>
