--- a/index.html
+++ b/index.html
@@ -9,13 +9,21 @@
 <body>
 <h1>this is h1</h1>
 <h2>this is h2</h2>
-<h3>This is h3</h3>
+<h3>login</h3>
+<input type="text">
+<input type="text" name="first" id="1">
 <ol>
     <li>
-        goal
+        Future
     </li>
-    <li>future</li>
-    <li>Hard work</li>
+    <li>
+        Goal
+    </li>
+    <li>
+        hard work
+    </li>
+    <li>
+        always focus
+    </li>
 </ol>
-</body>
 </html>
